css/style.css
@import url('https://fonts.googleapis.com/css?family=Roboto');

/* RESET */
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}
html {
  scroll-behavior: smooth;
}

body {
  font-family: 'Roboto', sans-serif;
}

a {
  text-decoration: none;
}

p {
  margin: 0.25rem 0;
}

/* Utility Classes */
.container {
  max-width: 1100px;
  margin: auto;
}
.bg-dark {
  background: #333;
  color: #f4f4f4;
}
.bg-primary {
  background: #1a7dce;
  color: #fff;
}

.bg-light {
  background: #f4f4f4;
  color: #333;
}

.p-1 { padding: 0.75rem; }
.p-2 { padding: 1.5rem; }
.p-3 { padding: 2rem; }

.py-1 { padding: 1rem 0; }
.py-2 { padding: 2rem 0; }
.py-3 { padding: 3rem 0; }

.text-primary {
  color: #1A7DCE;
}

.text-secondary {
  color: #4ca2e8;
}

.special-text {
  margin-top: 2rem;
  font-size: 2.7rem;
  font-weight: bold;
  letter-spacing: 0.2rem;
  color: #1A7DCE;
}

.typing {
  border-right: 0.2rem solid #1875BA;
}

.l-heading {
  font-size: 3rem;
  letter-spacing: 0.7rem;
  margin-bottom: 0.8rem;
}

.m-heading {
  font-size: 2rem;
  letter-spacing: 0.3rem;
  margin: 2rem 0;
}

.lead {
  color: #f4f4f4;
  font-size: 1.1rem;
}

.btn {
  background: #1a7dce;
  color: #f4f4f4;
  padding: 0.65rem 1rem;
  cursor: pointer;
  border: none;
  border-radius: 5px;
  font-size: 1.1rem;
  transition: all 0.2s;
}
.btn:hover {
  transform: translateY(-3px);
  box-shadow: 2px 2px 5px #020B12; 
}
.btn:active {
  transform: translateY(3px);
  box-shadow: none;
}

/* NAVBAR */
#navbar {
  display: flex;
  justify-content: space-between;
  padding: .5rem;
  background: #333;
  position: sticky;
  top: 0;
  overflow: hidden;
  z-index: 2;
}

#navbar .logo {
  color: #fff;
}

#navbar .nav-links {
  display: flex;
  list-style: none;
  align-items: center;
}

#navbar .nav-links li a {
  display: block;
  color: #fff;
  padding: 1rem;
  margin-right: .75rem;
}

#navbar .nav-links li a:hover {
  color: #1875BA;
  border-bottom: #1a7dce dotted 1px;
}

/* burger menu */
.burger {
  display: none;
  cursor: pointer;
}
.burger span {
  color: #fff;
  font-size: 0.9rem;
}
.burger div {
  height: 3px;
  width: 25px;
  margin: 5px;
  background: #fff;
}


/* Section SHOWCASE */
#showcase {
  background: #020B12 url('../imgs/showcase.jpg') no-repeat center center / cover;
  height: 93vh;
}

#showcase .showcase-content {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  text-align: center;
  height: 100%;
  color: #fff;
  background: rgba(0, 0, 0, 0.8)
}

#showcase .showcase-vision {
  display: flex;
  flex-direction: column;
}

/* #showcase .showcase-content ul {
  display: flex;
  list-style: none;
  margin-top: 1rem;
  color: #f4f4f4;
}

#showcase .showcase-content ul li {
  font-size: 1.2rem;
  padding: .5rem 2rem;
  margin-right: 15px;
  border-radius: 8px;
  box-shadow: #333 2px 4px 10px;
}

#showcase .showcase-content ul li:hover {
  background: #333;
  color: #1a7dce;
  box-shadow: none;
}
*/

/* Catalogo de Cursos */
#catalogo {
  background: #333;
  padding: 5rem 0;
  color: #f4f4f4;
}


#catalogo .cursos {
  display: flex;
  justify-content: space-evenly;
  margin-top: 5rem;
  margin-bottom: 8rem;
  border-radius: 10px;
}

#catalogo .cursos .curso {
  flex: 1;
  padding: 2rem 2rem;
  width: 33.3%;
  border-radius: 10px;
  box-shadow: #1a7dce 0 3px 1px, 0 -3px 1px #1a7dce;
  margin: 0 0.75rem;
  transition: all 0.2s ease-in-out;
}

#catalogo .cursos .curso:hover {
  box-shadow: none;
  border-radius: 20px;
  /* transform: scale(1.1, 1.2); */
  box-shadow: #1a7dce 0 0, 0 -10px #1a7dce;
  transform: translateY(10px);
}

#catalogo .cursos .curso i {
  margin-bottom: 0.8rem;
  color: #fff;
  background: #1A7DCE;
  padding: 1rem;
  border-radius: 50%;
}
#catalogo .cursos .curso .curso-header {
  text-align: center;
  margin-bottom: 1.3rem;
  color: #1875BA
}
#catalogo .cursos .curso ul {
  margin-top: 0.4rem;
  padding: 1rem;
}

/* Section Diferenciais */
#diferenciais {
  display: flex;
  justify-content: space-between;
  align-items: center;
  padding: 6rem 8rem;
  margin-bottom: 3rem;
}

#diferenciais .diferenciais-img,
#diferenciais .diferenciais-content {
  margin: 0 2rem;
}


#diferenciais .diferenciais-content h2 {
  margin: 1rem 0;
}

#diferenciais .diferenciais-content .l-heading+p{
  margin-bottom: 2rem;
}

/* Section Contato */
#contato {
  display: flex;
}

#contato .contato-form {
  flex: 1;
  padding: 3rem 2rem;
}
#contato .contato-form h2 {
  margin-bottom: 3rem;
}

#contato .contato-form .form-cell {
  margin-bottom: 1.2rem;
  padding: 0 2rem;
}

#contato .contato-form label {
  display: block;
  font-size: 1.3rem;
  margin-bottom: 0.5rem;
}

#contato .contato-form input {
  width: 100%;
  height: 2.2rem;
  border-radius: 5px;
  outline: none;
}

#contato .contato-form textarea {
  width: 100%;
  height: 6rem;
  border-radius: 5px;
  outline: none;
  font-size: 1.2rem;
}

#contato .contato-map {
  flex: 1;
}

/* Footer Principal */
#main-footer {
  background: #1875BA;
  color: #f4f4f4;
  text-align: center;
  padding: 1.2rem;
}

#main-footer a {
  color: #333;
}

#main-footer a:visited {
  color: #020B12;
}

